--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.0.6",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
+    "knuth-shuffle": "^1.0.1",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
     "pg": "^6.0.2",
