--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cairo": "^1.8.6",
+    "canvas": "^1.6.2",
     "cookie-session": "^2.0.0-alpha.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "handlebars": "^4.0.6",
+    "jquery": "^3.1.1",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
     "morgan": "^1.7.0",
