--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
     "pg": "^6.0.2",
+    "socket.io": "^1.6.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
