modified UI. added global navbar. sign in and log out functions work

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "local": "./node_modules/.bin/nodemon --ignore public/",
+    "local": "./node_modules/.bin/nodemon -L --ignore public/",
     "knex": "./node_modules/.bin/knex"
   },
   "author": "Lighthouse Labs",
@@ -17,6 +17,7 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.14.2",
     "handlebars": "^4.0.6",
     "jquery": "^3.1.1",
     "knex": "^0.11.7",
